2006-07-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/getSampleSize.java
	(test): Moved existing test code to test1(), now calls test1() and
	test2();
	(test1): New method,
	(test2): New method.

2006-07-13  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/testlet/javax/swing/text/html/HTMLDocument/FindById.java:
	New test.

2006-07-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/SampleModel/createDataBuffer.java: 
	New file,
	* gnu/testlet/java/awt/image/SampleModel/getPixel.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/getPixels.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/getSample.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/getSampleDouble.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/getSampleFloat.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/getSamples.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/getSampleSize.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/setPixel.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/setPixels.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/setSample.java: Likewise,
	* gnu/testlet/java/awt/image/SampleModel/setSamples.java: Likewise.

2006-07-11  Matt Wringe  <mwringe@redhat.com>

	* gnu/testlet/javax/crypto/spec/TestOfSecretKeySpec.java: New file.

2006-07-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JTable/setColumnSelectionAllowed.java: New test,
	* gnu/testlet/javax/swing/JTable/setRowSelectionAllowed.java: Likewise.

2006-07-11  Matt Wringe  <mwringe@redhat.com>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java 
	(testInitWithIVParameterSpec): New test. 

2006-07-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultBoundedRangeModel/DefaultBoundedRangeModel.java:
	Renamed general.java,