@@ -1,3 +1,8 @@
+2006-07-13  Tania Bento  <tbento@redhat.com>
+
+	* gnu/testlet/java/awt/Component/invalidate.java
+	(test2): Added new test.
+
 2006-07-13  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/getSampleSize.java
